fixed posts spacing issue

--- a/static/styles.css
+++ b/static/styles.css
@@ -29,7 +29,7 @@ html {
 }
 
 main {
-  display: block;
+  display: none;
 }
 
 a {
@@ -40,7 +40,7 @@ a {
 .auth-container .left,
 .auth-container .right,
 .auth-container form {
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -755,6 +755,7 @@ select:hover {
   gap: 1rem;
   max-height: 100vh;
   overflow: auto;
+  width: 100%;
 }
 
 /* makes last post viewable */
@@ -768,15 +769,13 @@ select:hover {
   flex-direction: column;
   gap: 1rem;
 
-  width: 750px;
+  width: 100%;
   height: fit-content;
 
   background: #ffffff;
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.01);
   border-radius: 10px;
   padding: 1.5rem;
-
-  margin-right: 7.5px;
 }
 
 .post .author-category-wrap {
@@ -1047,8 +1046,7 @@ input#commentBody {
 .comment .author {
   position: absolute;
   top: -20px;
-  width: 114px;
-  height: 20px;
+  padding: 0 0.5rem;
   background: linear-gradient(90deg, #f5f5f5 0%, #f1f1f1 98.19%);
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.01);
   border-radius: 8px 8px 0px 0px;
@@ -1073,8 +1071,7 @@ input#commentBody {
   position: absolute;
   top: 82px;
 
-  width: 78px;
-  height: 20px;
+  padding: 0.1rem 0.75rem;
   background: linear-gradient(90deg, #f5f5f5 0%, #f1f1f1 98.19%);
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.01);
   border-radius: 0px 0px 8px 8px;
